Fix z-index for `detail` stuff

--- a/style.css
+++ b/style.css
@@ -158,6 +158,12 @@ details.doc-index ul {
 	list-style-type: none;
 }
 
+
+details.odin-doc-toggle, details.doc-index {
+	z-index: 100;
+	position: relative;
+}
+
 details.odin-doc-toggle > summary.hideme span:before {
 	content: "Expand description";
 }
